--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -151,6 +153,7 @@
 								</div>
 								<div class="timeline-body">
 									<p>Developed various websites for clients using Wordpress, effectively marketing individual brands to increase audience engagement.</p>
+									<p>Diagnosed and provided solutions for a range of software, hardware, and connectivity issues.</p>
 								</div>
 							</div>
 						</li>
@@ -200,7 +203,7 @@
 				</div>
 				<div class="resume-btn">
 					<button>
-						<a href="./assets/Cassie Simpson Resume.pdf" download="newfilename">Download My Full Resume</a>
+						<a href="./images/Cassie Simpson Resume.pdf" download="Cassie Simpson Resume">Download My Full Resume</a>
 					</button>	
 				</div>
 			</div>
@@ -217,39 +220,131 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-4 text-center">
+					<div class="col-md-2 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-paintbrush"></i>
+								<i class="devicon-html5-plain-wordmark colored"></i>
 							</span>
-							<div class="feature-copy">
-								<h3>Front-End Development</h3>
-								<p>I build clean, structured, and semantic code that leads to smooth and responsive finished products that can be viewed on any device.</p>
-							</div>
 						</div>
 					</div>
 
-					<div class="col-md-4 text-center">
+					<div class="col-md-2 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-briefcase"></i>
+								<i class="devicon-css3-plain-wordmark colored"></i>
 							</span>
-							<div class="feature-copy">
-								<h3>Back-End Development</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-							</div>
 						</div>
-
 					</div>
-					<div class="col-md-4 text-center">
+					<div class="col-md-2 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-search"></i>
+								<i class="devicon-javascript-plain colored"></i>
 							</span>
-							<div class="feature-copy">
-								<h3>Web Design</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-							</div>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-jquery-plain-wordmark colored"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-bootstrap-plain-wordmark colored"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-nodejs-plain-wordmark colored"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-mysql-plain colored"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-mongodb-plain-wordmark colored"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-express-original colored"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-handlebars-plain-wordmark"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-react-original-wordmark colored"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-tailwindcss-original-wordmark colored"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-typescript-plain colored"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-git-plain-wordmark colored"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-figma-plain colored"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-webpack-plain-wordmark colored"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-wordpress-plain-wordmark"></i>
+							</span>
+						</div>
+					</div>
+					<div class="col-md-2 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="devicon-vscode-plain-wordmark colored"></i>
+							</span>
 						</div>
 					</div>
 				</div>
@@ -261,20 +356,20 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Work</h2>
+					<h2>My Work</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
+					<a href="#" class="work" style="background-image: url(images/book-search.png);">
 						<div class="desc">
-							<h3>Project Name</h3>
+							<h3>Book Search</h3>
 							<span>Illustration</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
+					<a href="#" class="work" style="background-image: url(images/coding-quiz.png);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Brading</span>
@@ -282,7 +377,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a href="#" class="work" style="background-image: url(images/shop-shop.png);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Illustration</span>
@@ -290,7 +385,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
+					<a href="#" class="work" style="background-image: url(images/canopy.png);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Design</span>
@@ -298,7 +393,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
+					<a href="#" class="work" style="background-image: url(images/note-taker.png);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Website</span>
@@ -306,7 +401,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-6.jpg);">
+					<a href="#" class="work" style="background-image: url(images/photo-port.png);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Illustration</span>
@@ -314,7 +409,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-7.jpg);">
+					<a href="#" class="work" style="background-image: url(images/ptex.png);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Brading</span>
@@ -322,7 +417,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-8.jpg);">
+					<a href="#" class="work" style="background-image: url(images/weather-dashboard.png);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Illustration</span>
@@ -341,8 +436,10 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
-					<p>Looking to refresh your company's brand with a new website? I'm your girl.</p>
-					<p><a href="mailto:cassie.s.simpson@gmail.com" class="btn btn-default btn-lg">Contact Me</a></p>
+					<p>I am looking for a full-time Web Developer position and am open to freelance work.</p>
+					<button class="btn btn-default btn-lg">
+						<a href="mailto:cassie.s.simpson@gmail.com">Contact Me</a>
+					</button>
 				</div>
 			</div>
 		</div>
@@ -381,7 +478,7 @@
 
 				<div class="row form-group">
 					<div class="col-md-12">
-						<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say hi!"></textarea>
+						<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say hi! Please fill out the Captcha after submitting the form, or email me directly at cassie.s.simpson@gmail.com""></textarea>
 					</div>
 				</div>
 				<div class="form-group">
